--- a/configpanel/res/values/strings.xml
+++ b/configpanel/res/values/strings.xml
@@ -64,4 +64,19 @@
     <string name="vibrator_summary">Define the strength of the vibrator</string>
     <string name="vibrator_test">Test</string>
 
+    <!-- QC 3.0 Charge limit -->
+    <string name="qc3_category">Charging limit</string>
+    <string name="qc3_title">QC 3.0 charging limit</string>
+    <string name="qc3_2000">2000 mA</string>
+    <string name="qc3_2100">2100 mA</string>
+    <string name="qc3_2200">2200 mA</string>
+    <string name="qc3_2300">2300 mA</string>
+    <string name="qc3_2400">2400 mA (Default)</string>
+    <string name="qc3_2500">2500 mA</string>
+    <string name="qc3_2600">2600 mA</string>
+    <string name="qc3_2700">2700 mA</string>
+    <string name="qc3_2800">2800 mA</string>
+    <string name="qc3_2900">2900 mA</string>
+    <string name="qc3_3000">3000 mA (Not recommended)</string>
+
 </resources>
