msm8996-common: ConfigPanel: Correct display of the menu item in the settings
alignment of the text relative to the icon

--- a/configpanel/res/values/strings.xml
+++ b/configpanel/res/values/strings.xml
@@ -78,4 +78,6 @@
     <string name="qc3_2600">2600 mA</string>
     <string name="qc3_2700">2700 mA</string>
 
+    <string name="summary_empty" translatable="false"></string>
+
 </resources>
